--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5"
   },
