--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@iconify/react": "^5.1.0",
+    "@telegram-apps/sdk-react": "^2.0.19",
     "@uxuycom/web3-tg-sdk": "^0.1.6",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.13.5",
