--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5"
